--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
       "css": [ "fillStyle.css" ],
       "exclude_globs": [ "*://ad.*/*", "*://ad0.*/*", "*://ad1.*/*", "*://ad2.*/*", "*://ad3.*/*", "*://ad4.*/*", "*://ad5.*/*", "*://ad6.*/*", "*://ad7.*/*", "*://ad8.*/*", "*://ad9.*/*", "*://ads?.*/*", "*://adserver*.*/*", "*://*/*adframe*", "*://tag.admeld*.*/*", "*://*.atdmt.com/*", "*://*.doubleclick.*/*", "*://*.ak.fbcdn.net/*", "*://plusone.google.com/*", "*://platform.twitter.com/widgets/*", "*://*.facebook.com/widgets/*", "*://*.facebook.com/plugins/*", "*://*.facebook.com/extern/*", "*://www.youtube.com/embed/*", "*://stats.complex.com/*", "*://*.addthis.com/static/*", "*://vitamine.networldmedia.net/*", "*://api.tweetmeme.com/*", "*://*.atwola.com/*", "*://engine.adzerk.net/*", "*://*.stumbleupon.com/badge/*", "*://*.bizographics.com/collect/*", "*://*.musthird.com/*" ],
       "js": [ "injected.min.js" ],
-      "matches": [ "http://*/*", "https://*/*" ],
+      "matches": ["<all_urls>"],
       "run_at": "document_start"
    } ],
    "default_locale": "en",
